--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-i18next": "^13.2.2",
+    "react-icons": "^5.0.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
