--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.3",
+    "capacitor-resources": "^2.0.5",
     "i18next": "^23.5.1",
     "jquery": "^3.7.0",
     "moment": "^2.29.4",
@@ -30,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "resources": "capacitor-resources -p android,ios"
   },
   "eslintConfig": {
     "extends": [
